--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "563246d1-2866-473e-82be-1b9318492f19"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
